CSS style update, margin collapsing fix

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ p {
     margin-left: auto;
     margin-right: auto;
     padding: 10px;
-    border: 1px solid black;
+    border-radius: 5px;
     color : white;    
-    display: block;
+    
 }
